# hermes-router

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
configs/: model_router.local.example.yaml  model_router.yaml  routing_proxy.example.yaml  routing_proxy.yaml
docs/: adapter-contract.md  advanced-routing.md  background-services.md  bundled-runtime-roadmap.md  business-model.md  lm-studio-parity-roadmap.md  local-server-compatibility.md  model-router-evals.md  model-router.md  open-switchboard-plan.md  performance-report.md  pricing-catalog.md  product-boundaries.md  product-north-star.md  production-readiness.md  public-preview-readiness.md  release-checklist.md  roadmap.md  runtime-adapter-contract.md  runtime-install-flow.md  runtime-parity-gap-report.md  runtime-strategy.md  session-aware-routing.md  telemetry-dogfood.md  upgrade-uninstall.md
docs/codex/: README.md  admin-state-contract.md  admin-state-contract.yaml  control-plane-roadmap.md  implementation-briefs.md  lm-studio-parity-prompts.md  maturity-and-escape-hatches.md  pricing-catalog-prompts.md  productization-roadmap.md  ui-tui-wireframes.md
examples/: basic_custom_agent.py
hermes/: __init__.py
hermes/plugins/: __init__.py
hermes/plugins/model_router/: __init__.py  availability.py  catalog_update.py  cli.py  config.py  dispatch.py  eval_runner.py  evals.py  hermes_plugin.py  installer.py  maturity.py  model_advisor.py  model_benchmark.py  model_registry.py  models.py  plugin.yaml  policy.py  pricing_catalog.py  product.py  profiles.py  proxy.py  proxy_config.py  proxy_dogfood.py  proxy_runtime.py  receipts.py  routing_log.py  runtime_adapters.py  runtime_install.py  scorer.py  settings_ui.py  setup_assistant.py  telemetry.py  tui.py  workflow_benchmark.py
hermes/plugins/model_router/admin/: __init__.py  actions.py  config_edit.py  model_library.py  state.py  supervisor.py
hermes/plugins/model_router/data/: eval_fixtures.yaml  model_catalog.yaml  model_router.yaml  pricing_catalog.yaml  proxy_template_hosted-openai-compatible.yaml  proxy_template_llamacpp.yaml  proxy_template_lmstudio.yaml  proxy_template_localai.yaml  proxy_template_mlx-lm.yaml  proxy_template_ollama.yaml  routing_proxy.example.yaml
model_router/: __init__.py
scripts/: benchmark_route_fast.py  check_route_fast_latency.py  dogfood_proxy.py  replay_routing_log.py  routing_proxy.py
tests/: test_model_router_adversarial.py  test_model_router_availability.py  test_model_router_benchmark.py  test_model_router_catalog_update.py  test_model_router_cli.py  test_model_router_dispatch.py  test_model_router_evals.py  test_model_router_golden.py  test_model_router_hermes_plugin.py  test_model_router_installer.py  test_model_router_maturity.py  test_model_router_model_registry.py  test_model_router_packaging.py  test_model_router_parity.py  test_model_router_policy.py  test_model_router_pricing_catalog.py  test_model_router_product.py  test_model_router_production_contract.py  test_model_router_proxy.py  test_model_router_proxy_config.py  test_model_router_proxy_dogfood.py  test_model_router_proxy_runtime.py  test_model_router_receipts.py  test_model_router_replay.py  test_model_router_routing_log.py  test_model_router_runtime.py  test_model_router_runtime_adapters.py  test_model_router_runtime_install.py  test_model_router_scorer.py  test_model_router_scorer_precision.py  test_model_router_settings_ui.py  test_model_router_setup.py  test_model_router_tui.py  test_model_router_validation.py  test_model_router_workflow_benchmark.py
tests/fixtures/routing_corpus/: short_prompt_calibration_events.jsonl  short_prompt_calibration_feedback.jsonl  v0_5_feedback.jsonl  v0_5_proxy_events.jsonl
