[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
# PyPI distribution compatibility: the public product is ModelRouter, but the
# installable package remains hermes-router because model-router is occupied.
name = "hermes-router"
version = "0.6.2"
description = "ModelRouter: fast deterministic model routing and OpenAI-compatible proxying for custom AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Samuel Behjou" },
]
dependencies = [
  "PyYAML>=6,<7",
]

[project.urls]
Homepage = "https://github.com/doncazper/model-router"
Repository = "https://github.com/doncazper/model-router"
Issues = "https://github.com/doncazper/model-router/issues"

[project.scripts]
hermes-router = "hermes.plugins.model_router.cli:main"
model-router = "hermes.plugins.model_router.cli:main"
model-router-proxy = "hermes.plugins.model_router.proxy:main"

[project.optional-dependencies]
proxy = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "uvicorn>=0.30,<1",
]
tui = [
  "textual>=0.86",
]
dev = [
  "pytest>=8,<9",
  "ruff>=0.8,<1",
]
release = [
  "build>=1,<2",
  "twine>=5,<7",
]

[tool.setuptools.packages.find]
include = ["hermes*", "model_router*"]

[tool.setuptools.package-data]
"hermes.plugins.model_router" = ["data/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
